# BookShop

./: README.md  db.sqlite3  manage.py  pyproject.toml  stripe.txt
Akiyama/: asgi.py  settings.py  urls.py  wsgi.py
Akiyama/core/: apps.py
Akiyama/settings/: base.py
_documentation/: database_schema.txt  packages.txt  paypal.txt
account/: admin.py  forms.py  models.py  tokens.py  urls.py  views.py
basket/: basket.py  views.py
checkout/: paypal.py  urls.py  views.py
orders/: models.py  views.py
payment/: urls.py  views.py
static/core/: base.css
static/payment/: index.js
store/: admin.py  models.py  urls.py  views.py
store/tests/: test_models.py
templates/: base.html
templates/account/: login.html  sub_base.html
templates/account/dashboard/: addresses.html  dashboard.html  delete_confirm.html  edit_addresses.html  edit_details.html  user_orders.html  user_wish_list.html
templates/account/password_reset/: password_reset_confirm.html  reset_status.html
templates/account/registration/: account_activation_email.html  account_invalid.html  login.html  register.html
templates/account/user/: dashboard.html  edit_details.html  password_reset_confirm.html  password_reset_form.html
templates/basket/: summary.html
templates/checkout/: delivery_address.html  delivery_choices.html  payment_selection.html  payment_successful.html
templates/payment/: error.html  orderplaced.html  payment_form.html  sub_base.html
templates/store/: base.html  category.html  home.html  index.html  single.html
templates/store/basket/: summary.html
(+1 files in other folders)
