[tool.poetry]
name = "akiyama"
version = "0.1.0"
description = ""
authors = ["AmaneTsu <63858627+AmaneTsukasa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
