[tool.poetry]
name = "akiyama"
version = "0.1.0"
description = ""
authors = ["AmaneTsu <63858627+AmaneTsukasa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
pillow = "^10.0.0"
mysql-connector-python = "^8.0.33"
coverage = "^7.2.7"
flake8 = "^6.1.0"
flake8-isort = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
